syntax = "proto3";

option csharp_namespace = "PMS.Services.Product";

import "Protos/product.proto";

package ProductLookup;

service ProductLookup {
    rpc GetProductById(GetProductByIdRequest) returns (Product.ProductInfo);
    rpc GetProductsByPartialName(GetProductsByPartialNameRequest) returns (stream Product.ProductInfo);
}

message GetProductByIdRequest {
    int32 id = 1;
}

message GetProductsByPartialNameRequest {
    string partialName = 1;
}
